<resources>
    <string name="app_name">gridLayout</string>
    <string name="configuracion_de_correo">Configuración de correo</string>
    <string name="indique">Indique el email a verificar</string>
    <string name="Email">Email</string>
    <string name="emaill">Email</string>
    <string name="Contrasena">Contraseña</string>
    <string name="contra">Contraseña</string>
    <string name="Aceptar">Aceptar</string>
</resources>