<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="20dp"
    android:columnCount="4"
    android:rowCount="6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracion_de_correo"
        android:layout_columnSpan="4"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indique"
        android:layout_columnSpan="2"
        android:textStyle="bold"
        android:textSize="15sp"
 />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_column="0"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:textSize="15dp"
 />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/emaill"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contrasena"
        android:layout_column="0"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/contra"
        />

    <Button
        android:layout_row="4"
        android:layout_marginTop="20dp"
        android:text="@string/Aceptar"
        />

</GridLayout>